--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 
 <head>
   <meta charset="utf-8" />
-  <title>Ionic App</title>
+  <title>랜덤 노래방</title>
 
   <base href="/" />
 
@@ -16,6 +16,9 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+
+  <meta name="naver-site-verification" content="234c1cb9aedc1de27ce88b8c03272816d443853a"/>
+  <meta name="google-site-verification" content="zCuSX-XIVXFQt0uwBc06UfgwspZelvKK2J8aUgNc0_k"/>
 </head>
 
 <body>
